@@ -7,13 +7,15 @@ NOTES
 - Can random number generation methods be made more efficient? (status: cancelled)
 - Add "Contributor" and "Usage Part to README.md (status: cancelled)
 - Remove comments (status: solved)
-- Remember to change the introduction of `gcd` function in READMD.md (status: solved)
+- Remember to change the introduction of `gcd` function in READMD.md (status: cancelled)
 - Start writing encryption and decryption functions. (status: solved)
-- Rewrite the project using mpz (using long long or int is really not a good idea) (status: unsolved)
-- Complete the encryption part in the main function (status: unsolved)
-    + Complete the standard input and file input part (status: unsolved)
-    + Ask the user if they already have a key pair or need to regenerate a new one (status: unsolved)
-- Complete the decryption part in the main function (status: unsolved)
-    + Complete the standard input and file input part (status: unsolved)
-- Test `number_to_string` and `string_to_number` (status: unsolved)
-    
+- Complete the encryption part in the main function (status: solved)
+    + Complete the standard input and file input part (status: solved)
+    + Ask the user if they already have a key pair or need to regenerate a new one (status: solved)
+- Complete the decryption part in the main function (status: solved)
+    + Complete the standard input and file input part (status: solved)
+- Test `number_to_string` and `string_to_number` (status: solved)
+- Rewrite the project using mpz (using long long or int is really not a good idea) (status: solved)
+- After all parts are completed, separate the main function from other functions (status: unsolved)
+- Start writing READMD.md (status: unsolved)
+- Start writing WRITEUP.tex (status: unsolved)
