@@ -47,4 +47,5 @@ Version 1.0.0.4 (2022-12-26)
 - Added new function `string_to_number`
 - Added new function `encrypt`
 - Added new function `decrypt`
-- Improve a little things in the main function
+- The main function is all completed
+- When decrypting, the standard input does not seem to be useful and may even make mistakes, so it was removed
